[gd_scene load_steps=6 format=3 uid="uid://b3u84076due2"]

[ext_resource type="PackedScene" uid="uid://c5ox08yiwsfuw" path="res://characters/player.tscn" id="1_80nbo"]
[ext_resource type="Script" uid="uid://dususlr2yr63q" path="res://game.gd" id="1_fc0e3"]
[ext_resource type="PackedScene" uid="uid://ce11bxhiyk7y8" path="res://trees/pine_tree.tscn" id="2_e2o6t"]
[ext_resource type="PackedScene" uid="uid://bhl0sa1l6j18k" path="res://characters/mobs.tscn" id="3_feb5d"]

[sub_resource type="Curve2D" id="Curve2D_fc0e3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1595, -903, 0, 0, 0, 0, -1587, 896, 0, 0, 0, 0, 1602, 873, 0, 0, 0, 0, 1595, -918, 0, 0, 0, 0, -1580, -918)
}
point_count = 5

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fc0e3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 2017.0
offset_bottom = 1152.0

[node name="Player" parent="." instance=ExtResource("1_80nbo")]
position = Vector2(682, 207)

[node name="Path2D" type="Path2D" parent="Player"]
curve = SubResource("Curve2D_fc0e3")

[node name="SpawnPath" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-1595, -903)
rotation = 1.5663494

[node name="PineTree" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(292, 324)

[node name="PineTree2" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(343, 292)

[node name="PineTree3" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(277, 281)

[node name="PineTree4" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(944, 532)

[node name="PineTree5" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(1291, 262)

[node name="PineTree6" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(1347, 367)

[node name="PineTree7" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(1478, 148)

[node name="PineTree8" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(1484, 737)

[node name="PineTree9" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(644, 821)

[node name="PineTree10" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(569, 779)

[node name="PineTree11" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(556, 858)

[node name="PineTree12" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(1696, 987)

[node name="PineTree13" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(127, 873)

[node name="Mobs" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(1280, 643)

[node name="Mobs2" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(400, 668)

[node name="Mobs3" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(38, 100)

[node name="Mobs4" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(2079, 70)

[node name="Mobs5" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(2171, 1140)

[node name="Mobs6" parent="." instance=ExtResource("3_feb5d")]
position = Vector2(977, -270)

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
